# ocaml-c-poc

./: .gitignore  CMakeLists.txt  helloworld.ml  main.c
